--- a/src/components/UI/DeliveryInput/DeliveryInput.module.css
+++ b/src/components/UI/DeliveryInput/DeliveryInput.module.css
@@ -2,16 +2,24 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 37px;
+    width: 256px;
 }
 
 .DeliveryInput label{
     text-transform: uppercase;
     color: #C4CEE5;
+    font-size: 12px;
+    line-height: 16pt;
+    font-weight: 400;
+    vertical-align: 5px;
     margin-bottom: 7px;
+    max-height: 16px;
 }
 
 .DeliveryInput input[type="text"]{
     color: #1D253C;
+    max-height: 24px;
+    margin-bottom: 2px;
 }
 
 .DeliveryInput input[type="text"]::placeholder {
