--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,6 +1,5 @@
 header{
 	display: flex;
-	/* justify-content: space-between; */
 	align-items: center;
 	padding: 0 32px;
 	height: 80px;
@@ -43,7 +42,13 @@ header{
     background-repeat:  no-repeat;
     background-position: right 12px center;
     font-size: 14px;
+    font-weight: 400;
+    line-height: 24pt;
     margin-right: 211px;
+}
+
+.track-search::placeholder{
+    color: #808592;
 }
 
 .menu{
